<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    android:orientation="vertical"
    tools:context=".UpdateDeleteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etname"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_name1"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etaddress"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_address1"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etage"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_age1"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etsex"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_sex1"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etcontact"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_contact1"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etcity"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_city1"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/btnupdate"
        android:text="@string/update"
        android:layout_marginStart="10dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/btndelete"
        android:text="@string/delete"
        android:layout_marginStart="10dp" />

</LinearLayout>