<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    android:orientation="vertical"
    tools:context=".PatientDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_patient_information" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etname"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_name"
        android:layout_marginStart="20dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etaddress"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_address"
        android:layout_marginStart="20dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etage"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_age"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etsex"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_sex"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etcontact"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_contact"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etcity"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_city"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnstore"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:layout_marginStart="20dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnget"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/get_all_patient_information"
        android:layout_marginStart="20dp" />



</LinearLayout>